hphp/test/quick/hh_numbers.php.expectf

Fatal error: Dec number is too big: 100000000000000000000000000000000 (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR in %s on line 2
